--- a/index.html
+++ b/index.html
@@ -129,11 +129,12 @@
       var bet_history = [];
       var bet_timestamp = [];
       function send() {
+        console.log(bet_timestamp);
         Contract.bet(bet_timestamp,"0xF658FffD6Cc732FaD39c9DDeB4a69aA7Ddd3c43f",{
             from:web3.eth.coinbase,
             gas: 400000*count,
             gasPrice: web3.toWei(3, 'gwei'),
-            value: web3.toWei(0.005*count, 'ether')
+            value: web3.toWei(price*count, 'ether')
           },function(error, result) {
             bet_timestamp = [];
             bet_history = [];
@@ -153,6 +154,7 @@
         if (guess != ""){
           bet_history.push(guess);  
           bet_timestamp.push(parseInt(Date.parse(guess)/1000));
+          console.log(bet_timestamp);
           history_html = "<h4 style='text-align:center' >Your Bets :</h4>";
           for (var i = 0; i < bet_history.length; i++){
               history_html += "<h5 style='text-align:center'>" + bet_history[i] + "</h5>";
