--- a/index.html
+++ b/index.html
@@ -81,6 +81,15 @@
           Reward Pool : 0 Ethers
         </H3>
       </div>
+      <div class="row justify-content-md-center my-2">
+        <ul>
+          <li> 50% First Prize </li>
+          <li> 25% Second Prize </li>
+          <li> 5%  Confirmation Reward </li>
+          <li> 5%  Leaderboard </li>
+          <li> 15% Development </li>
+        </ul>
+      </div>
 
       <div class="row justify-content-md-center my-2">
         <h5>  </h5>
