--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       </div>
 
       <div class="row justify-content-md-center my-2">
-        <img src="https://cdn.steemitimages.com/DQma2t28aGMBqRxbxz5FnJqJmrMQUJEB8mSqPAZEDpEr4r1/image.png" height="40%"></img>
+        <img src="https://cdn.steemitimages.com/DQma2t28aGMBqRxbxz5FnJqJmrMQUJEB8mSqPAZEDpEr4r1/image.png" height="350"></img>
       </div>
       <div class="row justify-content-md-center my-2">
         <blockquote class="blockquote">
@@ -91,12 +91,6 @@
         </ul>
       </div>
 
-      <div class="row justify-content-md-center my-2">
-        <h5>  </h5>
-        <span id="price">0</span>
-        <H4>&nbsp;Ethers per Bet</H4>
-      </div>
-
       <div class="row justify-content-md-center">
         <H5 id="players">
             Total 0 Players
@@ -110,29 +104,9 @@
       </div>
 
       <div class="row justify-content-md-center my-2">
-        <div class="col-md-4">
-          <div class="input-group mb-3">
-            <input id="guess" type="text" style="text-align:center" class="datepick form-control" placeholder="Your Guess" aria-label="Your Guess" aria-describedby="button-addon2">
-            <div class="input-group-append">
-              <button class="btn btn-outline-secondary" onclick="add()">Add</button>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="row justify-content-md-center my-2">
-          <h4 id="count">0</h4>
-          <h4>&nbsp;Bets</h4>
-      </div>
-
-       <div class="row justify-content-md-center my-2">
-          <div id="history">
-            <h4>Your Bets :</h4>
-          </div>
-      </div>
-
-      <div class="row justify-content-md-center my-2">
-          <button class="btn btn-outline-secondary" onclick="send()">Bet</button>
+        <form action="/bet" method="get">
+          <button type='submit' class="btn btn-outline-secondary">Get Started</button>
+        </form>
       </div>
 
       <div class="row justify-content-md-center my-2">
@@ -140,57 +114,17 @@
       </div>
 
     </div>
-
     <script>
       // MetaMask injects the web3 library for us.
       window.onload = function() {
         if (typeof web3 === 'undefined') {
-          document.getElementById('meta-mask-required').innerHTML = 'You need <a href="https://metamask.io/">MetaMask</a> browser plugin to run this example'
+          document.getElementById('meta-mask-required').innerHTML = 'You need <a href="https://metamask.io/">MetaMask</a> browser plugin to play'
         }
-      }
-      var abi = [ { "anonymous": false, "inputs": [ { "indexed": true, "name": "player", "type": "address" }, { "indexed": false, "name": "reward", "type": "uint256" } ], "name": "Payreward", "type": "event" }, { "constant": false, "inputs": [ { "name": "_timestamp", "type": "uint256" } ], "name": "announce", "outputs": [], "payable": false, "stateMutability": "nonpayable", "type": "function" }, { "anonymous": false, "inputs": [ { "indexed": false, "name": "bets", "type": "uint256" }, { "indexed": true, "name": "player", "type": "address" } ], "name": "Bet", "type": "event" }, { "constant": false, "inputs": [ { "name": "_timestamps", "type": "uint256[]" }, { "name": "_referral", "type": "address" } ], "name": "bet", "outputs": [], "payable": true, "stateMutability": "payable", "type": "function" }, { "anonymous": false, "inputs": [ { "indexed": false, "name": "player", "type": "address" } ], "name": "Confirm", "type": "event" }, { "constant": false, "inputs": [], "name": "confirm", "outputs": [], "payable": false, "stateMutability": "nonpayable", "type": "function" }, { "payable": true, "stateMutability": "payable", "type": "fallback" }, { "inputs": [], "payable": true, "stateMutability": "payable", "type": "constructor" }, { "constant": true, "inputs": [], "name": "announced", "outputs": [ { "name": "", "type": "bool" } ], "payable": false, "stateMutability": "view", "type": "function" }, { "constant": true, "inputs": [], "name": "announcedTimeStamp", "outputs": [ { "name": "", "type": "uint256" } ], "payable": false, "stateMutability": "view", "type": "function" }, { "constant": true, "inputs": [], "name": "averageTimestamp", "outputs": [ { "name": "", "type": "uint256" } ], "payable": false, "stateMutability": "view", "type": "function" }, { "constant": true, "inputs": [ { "name": "", "type": "address" }, { "name": "", "type": "uint256" } ], "name": "betHistory", "outputs": [ { "name": "", "type": "uint256" } ], "payable": false, "stateMutability": "view", "type": "function" }, { "constant": true, "inputs": [], "name": "confirmed", "outputs": [ { "name": "", "type": "bool" } ], "payable": false, "stateMutability": "view", "type": "function" }, { "constant": true, "inputs": [], "name": "confirmreward", "outputs": [ { "name": "", "type": "uint256" } ], "payable": false, "stateMutability": "view", "type": "function" }, { "constant": true, "inputs": [], "name": "costPerTicket", "outputs": [ { "name": "", "type": "uint256" } ], "payable": false, "stateMutability": "view", "type": "function" }, { "constant": true, "inputs": [], "name": "countBet", "outputs": [ { "name": "", "type": "uint256" } ], "payable": false, "stateMutability": "view", "type": "function" }, { "constant": true, "inputs": [], "name": "countConfirmed", "outputs": [ { "name": "", "type": "uint256" } ], "payable": false, "stateMutability": "view", "type": "function" }, { "constant": true, "inputs": [], "name": "countPlayer", "outputs": [ { "name": "", "type": "uint256" } ], "payable": false, "stateMutability": "view", "type": "function" }, { "constant": true, "inputs": [ { "name": "", "type": "address" } ], "name": "countReferral", "outputs": [ { "name": "", "type": "uint256" } ], "payable": false, "stateMutability": "view", "type": "function" }, { "constant": true, "inputs": [], "name": "countSecondWinners", "outputs": [ { "name": "", "type": "uint256" } ], "payable": false, "stateMutability": "view", "type": "function" }, { "constant": true, "inputs": [], "name": "countWinners", "outputs": [ { "name": "", "type": "uint256" } ], "payable": false, "stateMutability": "view", "type": "function" }, { "constant": true, "inputs": [], "name": "expireDate", "outputs": [ { "name": "", "type": "uint256" } ], "payable": false, "stateMutability": "view", "type": "function" }, { "constant": true, "inputs": [ { "name": "_timestamp", "type": "uint256" } ], "name": "getBetsOnTimestamp", "outputs": [ { "name": "", "type": "uint256" } ], "payable": false, "stateMutability": "view", "type": "function" }, { "constant": true, "inputs": [ { "name": "", "type": "address" } ], "name": "hasConfirmed", "outputs": [ { "name": "", "type": "bool" } ], "payable": false, "stateMutability": "view", "type": "function" }, { "constant": true, "inputs": [ { "name": "", "type": "address" } ], "name": "isPlayer", "outputs": [ { "name": "", "type": "bool" } ], "payable": false, "stateMutability": "view", "type": "function" }, { "constant": true, "inputs": [], "name": "maxCost", "outputs": [ { "name": "", "type": "uint256" } ], "payable": false, "stateMutability": "view", "type": "function" }, { "constant": true, "inputs": [], "name": "numOfConfirmationNeeded", "outputs": [ { "name": "", "type": "uint256" } ], "payable": false, "stateMutability": "view", "type": "function" }, { "constant": true, "inputs": [], "name": "owner", "outputs": [ { "name": "", "type": "address" } ], "payable": false, "stateMutability": "view", "type": "function" }, { "constant": true, "inputs": [ { "name": "", "type": "address" } ], "name": "referral", "outputs": [ { "name": "", "type": "address" } ], "payable": false, "stateMutability": "view", "type": "function" }, { "constant": true, "inputs": [], "name": "rewardPool", "outputs": [ { "name": "", "type": "uint256" } ], "payable": false, "stateMutability": "view", "type": "function" }, { "constant": true, "inputs": [], "name": "secondWinnerTimestamp", "outputs": [ { "name": "", "type": "uint256" } ], "payable": false, "stateMutability": "view", "type": "function" }, { "constant": true, "inputs": [], "name": "startDate", "outputs": [ { "name": "", "type": "uint256" } ], "payable": false, "stateMutability": "view", "type": "function" }, { "constant": true, "inputs": [ { "name": "", "type": "uint256" } ], "name": "timestampList", "outputs": [ { "name": "", "type": "uint256" } ], "payable": false, "stateMutability": "view", "type": "function" }, { "constant": true, "inputs": [], "name": "winnerTimestamp", "outputs": [ { "name": "", "type": "uint256" } ], "payable": false, "stateMutability": "view", "type": "function" } ];
-      var Contract = web3.eth.contract(abi).at("0x0bb415008a21a619a1492eb47d27f94e7a2cfd27");
-      var count = parseInt(document.getElementById('count').innerHTML);
-      var bet_history = [];
-      var bet_timestamp = [];
-      function send() {
-        price = document.getElementById('price').innerHTML;
-        Contract.bet(bet_timestamp,"0xF658FffD6Cc732FaD39c9DDeB4a69aA7Ddd3c43f",{
-            from:web3.eth.coinbase,
-            gas: 400000*count,
-            gasPrice: web3.toWei(3, 'gwei'),
-            value: web3.toWei(price*count, 'ether')
-          },function(error, result) {
-            bet_timestamp = [];
-            bet_history = [];
-            count = 0;
-            document.getElementById('history').innerHTML = "<h4>Your Bets : </h4>";
-            document.getElementById('count').innerHTML = count;
-            if (!error) {
-              document.getElementById('response').innerHTML = 'Success: <a target="_blank" href="https://ropsten.etherscan.io/tx/' + result + '"> View Transaction </a>'
-            } else {
-              document.getElementById('response').innerHTML = '<pre>' + error + '</pre>'
-            }
-        });
       };
-      function add() {
-        count += 1;
-        var guess = document.getElementById('guess').value;
-        if (guess != ""){
-          bet_history.push(guess);
-          bet_timestamp.push(parseInt(Date.parse(guess)/1000));
-          history_html = "<h4 style='text-align:center' >Your Bets :</h4>";
-          for (var i = 0; i < bet_history.length; i++){
-              history_html += "<h5 style='text-align:center'>" + bet_history[i] + "</h5>";
-          }
-          document.getElementById('history').innerHTML = history_html;
-          document.getElementById('count').innerHTML = count;
-        }
-        else
-          document.getElementById('history').innerHTML = "Please guess a date";
+      function go(){
+
       };
     </script>
-
     <script>
       $(document).ready(function() {
         $('.datepick').flatpickr({minDate: "today" });
