--- a/bet.html
+++ b/bet.html
@@ -64,10 +64,24 @@
           Reward Pool : 0 Ethers
         </H3>
       </div>
-
       <div class="row justify-content-md-center my-2">
         <h4><span id="price">0</span></h4>
         <H4>&nbsp;Ethers per Bet</H4>
+      </div>
+      <hr>
+
+      <div class="container">
+        <div class="row">
+          <div class="col-sm justify-content-md-center" style="text-align:center">
+            <h4> Referrals </h4>
+          </div>
+          <div class="col-sm justify-content-md-center" style="text-align:center">
+            <h4> Bet Now! </h4>
+          </div>
+          <div class="col-sm justify-content-md-center" style="text-align:center">
+            <h4> Your Bet History </h4>
+          </div>
+        </div>
       </div>
 
       <div class="row justify-content-md-center my-2">
